/*
 * Copyright 2018-2019 VMware, Inc.
 * SPDX-License-Identifier: MIT
 */

syntax = "proto3";

package vmw.pscoe.hints;

option java_package = "com.vmware.pscoe.o11n.hints.proto";
option java_outer_classname = "ScriptingMembersProto";
option java_multiple_files = false;

import "vmw/pscoe/hints/scripting-api.proto";

message Property {
    string name = 1;
    string description = 2;
    ScriptingApi.Stage stage = 3;
    bool read_only = 4;
    ReturnType returnType = 5;
    repeated Example examples = 6;
}

message Constructor {
    string description = 1;
    ScriptingApi.Stage stage = 2;
    repeated Parameter parameters = 3;
    repeated Example examples = 4;
}

message Method {
    string name = 1;
    string description = 2;
    ScriptingApi.Stage stage = 3;
    repeated Parameter parameters = 4;
    ReturnType returnType = 5;
    repeated Example examples = 6;
}

message ReturnType {
    string type = 1;
    string description = 2;
    string enumeration = 3;
}

message Parameter {
    string name = 1;
    string type = 2;
    string description = 3;
    string enumeration = 4;
}

message Example {
    string description = 1;
    string code_snippet = 2;
}
