/*
 * Copyright 2018-2019 VMware, Inc.
 * SPDX-License-Identifier: MIT
 */

syntax = "proto3";

package vmw.pscoe.hints;

option java_package = "com.vmware.pscoe.o11n.hints.proto";
option java_outer_classname = "ScriptingApiPackProto";
option java_multiple_files = false;

import "vmw/pscoe/hints/constructs.proto";

message ScriptingApiPack {
    uint32 version = 1;
    string uuid = 2;
    Metadata metadata = 3;
    repeated Class classes = 4;
    repeated Type types = 5;
    repeated FunctionSet functionSets = 6;
    repeated Primitive primitives = 7;
    repeated Enumeration enums = 8;

    message Metadata {
        int64 timestamp = 1;
        string server_name = 2;
        string server_version = 3;
        string module_name = 4;
        string module_version = 5;
        string hinting_version = 6;
    }
}
